05 Feb 2002 Asm assists for memory synchronization - Greg Smith
04 Feb 2002 Fix Ifetch PER flag in State Desc, Fix LCTL intercepts - Paul Leisy
04 Feb 2002 Fix very minor memory leaks in sockdev logic - Fish
03 Feb 2002 Close hercules configuration file after processing - Volker Bandke
03 Feb 2002 Added PGMPRDOS config parameter - Jay Maynard
03 Feb 2002 Performance tweaks - Greg Smith
01 Feb 2002 CTCI-W32 (Win32 CTCA protocol using WinPcap) - Fish
31 Jan 2002 Fix PER in guest for OPTION_CPU_UNROLL - Paul Leisy
30 Jan 2002 Fix SIE validity checks and intercepts - Paul Leisy
29 Jan 2002 Fix pending I/O interrupt when enabling I/O subclass - Jan Jaeger
28 Jan 2002 PER fix for BCTR and move #endif for FEATURE_PER2 - Paul Leisy
27 Jan 2002 Documentation updates for TCP/IP and Socket Readers - Roger Bowler
25 Jan 2002 Include Malcolm Beattie's dasdcat program - Roger Bowler
25 Jan 2002 More PER fixes for PR and addr wrap fix for MVCL - Paul Leisy
24 Jan 2002 PER fixes for PR and MVCL - Paul Leisy
20 Jan 2002 dasdinit can now create a cckd file - Greg Smith
17 Jan 2002 Add PER storage checks for TRAP accesses - Paul Leisy
17 Jan 2002 Fix PER rupt TEA for PC, PR and PT - Paul Leisy
16 Jan 2002 Synchronous I/O fixes - Greg Smith
15 Jan 2002 Add PER checks to MVCL - Paul Leisy
14 Jan 2002 Device subclass priority (try #1) - Greg Smith
14 Jan 2002 Improve cckd initialization time - Greg Smith
11 Jan 2002 Gabor Hoffers performance updates
11 Jan 2002 Fix ifetch performance so it works with PER - Juergen Dobrinski
06 Jan 2002 CMPSC kludge for Cygwin gcc faulty linkage - Greg Smith
05 Jan 2002 Make sure that {fthreads,w32chan}.c go into dist - Matt Zimmerman
02 Jan 2002 Change store of percode in PSA to use realregs->perc - Paul Leisy
02 Jan 2002 Fix stack and BCT per checks - Paul Leisy
02 Jan 2002 Don't set STORE PER when operand specified as REAL - Paul Leisy
30 Dec 2001 Fix for cckd and big-endian - Greg Smith
23 Dec 2001 OPTION_LPP_RESTRICT - Jan Jaeger